// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render caption text with example Farsi offscreen text 1`] = `
.c0 {
  font-size: 0.9375em;
  line-height: 1.125rem;
  background-color: #D5D0CD;
  color: #404040;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  padding: 0.5rem;
  width: 100%;
}

@media (min-width:37.5em) {
  .c0 {
    font-size: 0.875em;
  }
}

@media (min-width:37.5em) {
  .c0 {
    padding: 0.5rem 1rem;
  }
}

<figcaption
  className="c0"
>
  <span
    className="hbhUhz"
  >
     ، عنوان تصویر
  </span>
  Some caption text...
</figcaption>
`;

exports[`should render caption text with example News offscreen text 1`] = `
.c0 {
  font-size: 0.9375em;
  line-height: 1.125rem;
  background-color: #D5D0CD;
  color: #404040;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  padding: 0.5rem;
  width: 100%;
}

@media (min-width:37.5em) {
  .c0 {
    font-size: 0.875em;
  }
}

@media (min-width:37.5em) {
  .c0 {
    padding: 0.5rem 1rem;
  }
}

<figcaption
  className="c0"
>
  <span
    className="hbhUhz"
  >
    Image caption, 
  </span>
  Some caption text...
</figcaption>
`;

exports[`should render caption text with no VisuallyHiddenText component when no imageCaptionOffscreenText is defined in ServiceContext 1`] = `
.c0 {
  font-size: 0.9375em;
  line-height: 1.125rem;
  background-color: #D5D0CD;
  color: #404040;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  padding: 0.5rem;
  width: 100%;
}

@media (min-width:37.5em) {
  .c0 {
    font-size: 0.875em;
  }
}

@media (min-width:37.5em) {
  .c0 {
    padding: 0.5rem 1rem;
  }
}

<figcaption
  className="c0"
>
  Some caption text...
</figcaption>
`;
